@@ -281,6 +281,13 @@ dd879603c6f9ea59e58db1131c44041ff0ecb885b3e17f50c10249090dd66a13  test/results/t
 e3535bd5ea380aca02a17191d36c59e4d9f5ccc731803ede94a0475a596a0d1c  test/results/test0037-riscv32-binary
 b3e51dc32fda6443b41db6ac89832ef09a99e35fb51ad0ec52edc39d88d42161  test/results/test0037-riscv64-binary
 d97f81759aa9f5fc07160a2e74cdff10723dc7710216ad31ed5ab6f39fb1e4c2  test/results/test0037-x86-binary
+7560b4818e98eb947637b444b8ad1cfccf99f12b86189d2b2047c5a385d55564  test/results/test0038-aarch64-binary
+20060674da6e83e0c2a9c5094157f2f57befa733c7a92ce68347c3c5e3a5e7d3  test/results/test0038-amd64-binary
+a7c8a9fdbbaa717a8f946ebf53e72f3ebf78546b35f9c6e905cb348e110689ac  test/results/test0038-armv7l-binary
+8b36f57915323d5c0af8aa4e445a43f7ca8162c3d142eac6ccadc51ebe12b086  test/results/test0038-knight-posix-binary
+57c337bb706ee95187fa7ac232ba9e21fdb5a52886ce3ee8e67896fb5c0a9464  test/results/test0038-riscv32-binary
+b35d1abd8c1e75fafe85f21ebf2f76c11500f3e40a4d047746765133f10c2104  test/results/test0038-riscv64-binary
+29193bff8acf25eba2e9bae1de1f956d58cc114491e9059c525f27e5a30a6f6f  test/results/test0038-x86-binary
 9fbdb6d8893d810edcd82f573dd8237bd9821c907393f286a3c21b1f8f721bb8  test/results/test0100-aarch64-binary
 ec4da43c473924f70827c904a4c6d5f45701ab9e76b444ba152af893e16ee440  test/results/test0100-amd64-binary
 8f92b728d28972166e4aa7a3acc400e6dd629ec769cc176f1eedacd26855d130  test/results/test0100-armv7l-binary
@@ -329,10 +336,10 @@ abf349aaf23111dcf813ca4c11d725e154d2367bf5ab91b62e022fd34da72f7d  test/results/t
 af4dd167d0ea436831ad24b3c337a4255b09e4628ff00979e7787735de927186  test/results/test0106-riscv32-binary
 818e8e8de251909fac6002b7b6d66a70f5e8ed7eeec5ddf5b8b3588cbc436a53  test/results/test0106-riscv64-binary
 934581c994dd81c4bbd7b501084f9734c8cd0b9a78fffb08adba75b17083503a  test/results/test0106-x86-binary
-43358e8032d2a7268f4fabc47d8839565daac799ec62110dba5b29fa7c77c695  test/results/test1000-aarch64-binary
-599323f69cd04024a766237587092edde80c1cb17cec26ec25b1ce392de27b8c  test/results/test1000-amd64-binary
-250b30900f25b17f495cb78649b74f22a5b9f4af51c60041631deed036390673  test/results/test1000-armv7l-binary
-ce77d4997cbd6178bd166d810825b69aada09591d165a06a71da14a93d02ca07  test/results/test1000-knight-posix-binary
-bc6d57e9eb585759e99333a160c0f66c6aff3d64e6f25edd5d62dd8720c3b340  test/results/test1000-riscv32-binary
-95c6a44ec6d3641d7ab79d8f73493fcad5693ad7dd7c8ba3a637dcbda68d839e  test/results/test1000-riscv64-binary
-db97580672244492d91a08fac0272256521074701f9292f49cbd37c5adad0a76  test/results/test1000-x86-binary
+2c17bde3a493864b5775859c3be41db92a2990e365881afb3ae3da34c5d62d26  test/results/test1000-aarch64-binary
+f4fc424baba6d25a15f25c63a5e2236518b06afedcb90e4389b9bd6845ed9923  test/results/test1000-amd64-binary
+ccbb84ed5209ae27c0f37bfbe3a7b21ae3792d2c5f9ec661a1a26d4b09b45f3f  test/results/test1000-armv7l-binary
+2faa1949f78b6f19d11f33b4bbeb24879cb1ec497460eb86cdfacab2575cb105  test/results/test1000-knight-posix-binary
+c23333c80299e3aa8ce24d710f709ffd8c294e0dfd4647c761fd6457c44f4251  test/results/test1000-riscv32-binary
+8af7d75075baba9b2578be4692637c239d0b45b8196145e5f97a5598a820d9bf  test/results/test1000-riscv64-binary
+dfca2cdf49e95aefe1dc6e510a6dc31aa4d5dd6f5d19f3c31362892139729f45  test/results/test1000-x86-binary
