@@ -28,6 +28,7 @@ Added initial support for function-like macros
 Added support for octal escape codes in strings and characters
 Added support for \? escape code in strings and characters
 Added support for multiple variable declarations per statement
+Added support for `static`, `_Noreturn`, and `inline` qualifiers for globals
 
 * 1.11 - 2023-11-01
 ** Added
